Added scoreboard functionality

--- a/Rockpaperscissors-main/Rockpaperscissors-main/index.html
+++ b/Rockpaperscissors-main/Rockpaperscissors-main/index.html
@@ -18,7 +18,9 @@
   <img id="player-choice" src="question-mark.png">
   <img id="cpu-choice" src="question-mark.png">
 
-
+  <div id='wins'>0</div>
+  <div id='ties'>0</div>
+  <div id='loses'>0</div>
 
 
 
